# protobuf-tutorial

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  envoy.yaml  package.json  protogen.sh  shell.nix  tsconfig.json
client/: .eslintignore  .eslintrc.json  BUILD.bazel  package.json
client/patches/: jest-haste-map+27.5.1.patch
client/src/: App.tsx
client/src/proto/com/kevinh/server/v1/: Hello_serviceServiceClientPb.js  Hello_serviceServiceClientPb.ts  hello_service_pb.d.ts  hello_service_pb.js  language_pb.d.ts  language_pb.js
client/src/proto/com/kevinh/server2/v1/: HelloworldServiceClientPb.js  HelloworldServiceClientPb.ts
nix/: sources.json
proto/: buf.work.yaml
proto/server/: buf.gen.yaml
proto/server/com/kevinh/server/v1/: hello_service.proto  language.proto
proto/server2/: buf.gen.yaml
proto/server2/com/kevinh/server2/v1/: helloworld.proto
server/: BUILD.bazel  deployment.yaml  tsconfig.json
server/src/: index.ts
server2/: BUILD.bazel  tsconfig.json
server2/src/: index.ts
server2_client/: BUILD.bazel
server_client/: BUILD.bazel
utils/calculator/: BUILD.bazel  tsconfig.json
utils/calculator/src/: index.ts
