workspace(name="protobuf_tutorial")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "build_bazel_rules_nodejs",
    sha256 = "f10a3a12894fc3c9bf578ee5a5691769f6805c4be84359681a785a0c12e8d2b6",
    urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/5.5.3/rules_nodejs-5.5.3.tar.gz"],
)

load("@build_bazel_rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")
build_bazel_rules_nodejs_dependencies()

# fetches nodejs, npm, and yarn
load("@build_bazel_rules_nodejs//:index.bzl", "node_repositories", "yarn_install")
node_repositories()

yarn_install(
    name = "npm",
    package_json = "//:package.json",
    yarn_lock = "//:yarn.lock",
)

# This is just for the client_npm as we use create-react-app so it will create
# a different package.json
yarn_install(
    # Name this client-npm so that Bazel Label references look like @npm//package
    name = "client_npm",
    exports_directories_only = True, # defaults to True anyway.
    frozen_lockfile = True, # defaults to true anyway. For yarn 2+, uses --immutable
    package_json = "//client:package.json",
    data = ["//client:patches/jest-haste-map+27.5.1.patch"],
    yarn_lock = "//client:yarn.lock",
)