load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
    ],
)

ts_project(
    name = "calculator",
    srcs = ["src/index.ts"],
    composite = True,
    declaration = True,
    out_dir = "build",
    root_dir = "src",
    tsconfig = ":tsconfig",
    visibility = ["//visibility:public"],
)
